v3.7.10 (XXXX-XX-XX)
--------------------

* Fixed a problem that coordinators would vanish from the UI and the Health API
  if one switched the agency Supervision into maintenance mode and kept left
  that maintenance mode on for more than 24h.

* Fixed a bug in the web interface that displayed the error "Not authorized to
  execute this request" when trying to create an index in the web interface in a
  database other than `_system` with a user that does not have any access
  permissions for the `_system` database.
  The error message previously displayed error actually came from an internal
  request made by the web interface, but it did not affect the actual index
  creation.

* Fixed issue BTS-309: The Graph API (Gharial) did not respond with the correct
  HTTP status code when validating edges. It now responds with 400 (Bad Request)
  as documented and a new, more precise error code (1947) and message if a
  vertex collection referenced in the _from or _to attribute is not part of the
  graph.


v3.7.9 (2021-03-01)
-------------------

* Fix issue #13476: The Java driver v6.9.0 (and older) has bad performance when
  iterating over AQL cursor results in certain cases. This works around this.
  This workaround will no longer be available in 3.8.

* Enable statistics in web UI in non-`_system` databases in cluster mode.
  In cluster mode, the web UI dashboard did not display statistics properly when
  not being logged in to the `_system` database. For all other databases than
  `_system`, no statistics were displayed but just some "No data..."
  placeholders.
  Statistics for non-`_system` databases were not properly displayed since
  3.7.6 due to an internal change in the statistics processing.

  In addition, a new startup option `--server.statistics-all-databases` controls
  whether cluster statistics are displayed in the web interface for all
  databases (if the option is set to `true`) or just for the system database (if
  the option is set to `false`).