@@ -1,6 +1,8 @@
 v3.7.10 (XXXX-XX-XX)
 --------------------
 
+* Fixed Github issue #13632: Query Fails on Upsert with Replace_nth.
+
 * Fixed a problem that coordinators would vanish from the UI and the Health API
   if one switched the agency Supervision into maintenance mode and kept left
   that maintenance mode on for more than 24h.
